# dsa-cpp

./: .gitignore
data-structures/: CMakeLists.txt  linked-lists.cpp  linked-lists.h
data-structures/binary-search-tree/: base.h  number.h
data-structures/binary-tree/: base.h  namespaces.h  number.cpp  number.h
data-structures/circular-doubly-linked-lists/: base.h  number.h
data-structures/circular-linked-lists/: base.h  number.h
data-structures/circular-single-linked-lists/: base.h  number.h
data-structures/doubly-linked-lists/: base.h  number.h
data-structures/edges/: weightedEdges.h
data-structures/linked-lists/: base.cpp  base.h  number.cpp  number.h
data-structures/nodes/: avlNode.h  binNode.h  doublyNode.h  naryNode.h  singleNode.h  ternNode.h  undirNode.h
data-structures/queue/: base.h
data-structures/single-linked-lists/: base.h  character.h  number.h
data-structures/stack/: base.h  number.h
data-structures/test/circular-doubly-linked-lists/: CMakeLists.txt
data-structures/test/circular-doubly-linked-lists/src/: main.cpp
data-structures/test/circular-linked-lists/: CMakeLists.txt
data-structures/test/circular-linked-lists/src/: main.cpp
data-structures/test/circular-single-linked-lists/: CMakeLists.txt
data-structures/test/circular-single-linked-lists/src/: main.cpp
data-structures/test/doubly-linked-lists/: CMakeLists.txt
data-structures/test/doubly-linked-lists/src/: main.cpp
data-structures/test/linked-lists/: CMakeLists.txt
data-structures/test/linked-lists/src/: main.cpp
data-structures/test/queue/: CMakeLists.txt
data-structures/test/queue/src/: main.cpp
data-structures/test/queue/src/data/: numbers.txt
data-structures/test/queue/src/lib/: namespaces.h
data-structures/test/queue/src/lib/terminal/: CMakeLists.txt  input.cpp
data-structures/test/single-linked-lists/: CMakeLists.txt
data-structures/test/single-linked-lists/src/: main.cpp
data-structures/undirected-graphs/: base.h
practices/binary-tree/: CMakeLists.txt
practices/binary-tree/src/: main.cpp
practices/binary-tree/src/lib/: namespaces.h
practices/binary-tree/src/lib/terminal/: input.cpp
practices/college-test1/: CMakeLists.txt
practices/college-test1/src/: main.cpp
practices/college-test2/: CMakeLists.txt
practices/college-test2/src/lib/emergency/: CMakeLists.txt  emergency.h
practices/dungeons-without-dragons/: CMakeLists.txt
practices/dungeons-without-dragons/src/: main.cpp
practices/dungeons-without-dragons/src/lib/: namespaces.h
practices/dungeons-without-dragons/src/lib/dungeons/: CMakeLists.txt  dungeons.h
practices/dungeons-without-dragons/src/lib/terminal/: input.cpp
practices/grades-system/: CMakeLists.txt
practices/grades-system/src/: main.cpp
practices/grades-system/src/lib/: CMakeLists.txt  namespaces.h
practices/grades-system/src/lib/students/: CMakeLists.txt  students.h
practices/grades-system/src/lib/terminal/: ansiEsc.cpp  cols.h  input.cpp  input.h
practices/matriarchy-tree/: CMakeLists.txt
practices/matriarchy-tree/data/: matriarchy.csv
practices/matriarchy-tree/src/: main.cpp
practices/matriarchy-tree/src/lib/: namespaces.h
practices/matriarchy-tree/src/lib/matriarchy/: CMakeLists.txt  matrNode.h  matrTree.h
practices/matriarchy-tree/src/lib/terminal/: cols.h  input.cpp
practices/requests-system-1queue/: CMakeLists.txt
practices/requests-system-1queue/src/: main.cpp
practices/requests-system-1queue/src/data/: requests.csv
practices/requests-system-1queue/src/lib/: namespaces.h
practices/requests-system-1queue/src/lib/requests/: CMakeLists.txt  requests.h
practices/requests-system-1queue/src/lib/terminal/: CMakeLists.txt  cols.h  input.cpp  input.h
practices/requests-system-2queues/src/lib/requests/: requests.h
practices/requests-system-2queues/src/lib/terminal/: cols.h
practices/sorting-stacks/: CMakeLists.txt  README.md
practices/sorting-stacks/src/: main.cpp
practices/sorting-stacks/src/lib/: namespaces.h
practices/sorting-stacks/src/lib/algorithm/: CMakeLists.txt  modHanoi.cpp  modHanoi.h
practices/sorting-stacks/src/lib/terminal/: ansiEsc.cpp  input.cpp  input.h
practices/student-management/: main.cpp
recursion/: math.c  recursion-types.c  static-variables.c
search-tecniques/: binary-search.c
sorting-tecniques/o-n2/: bubble-sort.c  insertion-sort.c  selection-sort.c
sorting-tecniques/o-nlogn/: count-sort.c  merge-sort.c  quick-sort.c
time-complexity/: time-complexity.cpp
